# ADaPT-ETL

./: .dockerignore  .gitignore  Dockerfile  INSTALLATION.md  Makefile  README.md  compose.yaml  requirements.txt  setup.py
.github/workflows/: plantuml.yml
adapt/connector/: Makefile  README.md  pyproject.toml
adapt/connector/connector/: dispatcher.py  post_processor.py  service.py
adapt/pipeline/: Makefile  README.md  pyproject.toml
adapt/pipeline/pipeline/: data_ingest_cli.py
adapt/serializer/: Makefile  README.md  pyproject.toml
adapt/serializer/examples/: dict_normalization.py  json_pipeline.py
adapt/serializer/examples/configs/: dict_normalization.yaml
adapt/serializer/serializer/: serializer.py  serializer_typing.py
adapt/utils/: Makefile  README.md  pyproject.toml  setup.py
adapt/utils/utils/: __init__.py  config_reader.py  exporter.py  input_reader.py  typing_collection.py
configs/authorization/facebook/: authorization.yaml
configs/authorization/google/: authorization.yaml
configs/connector/facebook/: campaign.yaml
configs/connector/google/: campaign.yaml
configs/pipeline/: data_ingestion.yaml
configs/serializer/facebook/: campaign.yaml
configs/serializer/google/: campaign.yaml
connector/: README.md  setup.py
connector/connector/: authorization.py  dispatcher.py
docs/: Gemfile  _config.yml  api-reference.md  contributing.md  examples.md  index.md  installation.md
docs/_includes/: head_custom.html
docs/_layouts/: package.html
docs/_packages/: connector.md  pipeline.md  serializer.md  utils.md
docs/_sass/color_schemes/: adapt.scss
docs/_sass/custom/: custom.scss
docs/assets/css/: custom.scss
docs/diagrams/: connector_module.puml  connector_sequence.puml  dataflow.puml  pipeline_module.puml  pipeline_sequence.puml  serializer_module.puml  serializer_sequence.puml  system_overview.drawio
pipeline/: README.md  setup.py
pipeline/pipeline/: data_ingest_cli.py  pipeline.py
serializer/: README.md  setup.py
serializer/examples/configs/: json_pipeline.yaml
serializer/serializer/: serializer_typing.py
utils/: README.md  setup.py
utils/utils/: __init__.py  exporter.py  typing_collection.py
